# cars-expert-system

./: README.md  pyproject.toml
cars_expert_system/: expert_logic.py  fuzzy_logic.py  main.py
