[tool.poetry]
name = "cars-expert-system"
version = "0.1.0"
description = "Uni project for expert systems course"
authors = ["Alan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.0"
experta = "^1.9.4"
scikit-fuzzy = "^0.5.0"
scipy = "^1.10.0"  # Updated for better Python 3.9 compatibility
packaging = "^24.2"
networkx = "^2.8.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
